Fix horizontal scrollbar not working (#2534)
* Fix horizontal scrollbar not working

- Add pointer-events css for footer and PageNavOverlay

* Add proper css fix

--- a/src/components/DocumentContainer/DocumentContainer.scss
+++ b/src/components/DocumentContainer/DocumentContainer.scss
@@ -21,12 +21,17 @@
     height: 100%;
 
     .footer {
+      pointer-events: none;
       position: absolute;
       bottom: 0;
       left: 0;
       z-index: 55;
       width: 100%;
       transition: all .3s ease;
+
+      &>* {
+        pointer-events: auto;
+      }
     }
   }
 }
